Fighting service loaders for logging